# adventofcode

./: .gitignore  pyproject.toml
2024/: 01.py  04.py  20.py  21.py  22.py  23.py  README.md
