[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["pahanini <pahanini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
networkx = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
